--- a/report/assets/styles.css
+++ b/report/assets/styles.css
@@ -1153,6 +1153,74 @@
   stroke: var(--color-not-applicable);
 }
 
+.lh-ratio__wrapper .lh-ratio__content::before {
+  content: '';
+  height: var(--score-icon-size);
+  width: var(--score-icon-size);
+  margin: var(--score-icon-margin);
+  display: inline-block;
+}
+.lh-ratio__wrapper--pass .lh-ratio__content {
+  color: var(--color-pass);
+}
+.lh-ratio__wrapper--pass .lh-ratio__background {
+  background-color: var(--color-pass);
+}
+.lh-ratio__wrapper--pass .lh-ratio__content::before {
+  background-color: var(--color-pass);
+  border-radius: 50%;
+}
+.lh-ratio__wrapper--average .lh-ratio__content {
+  color: var(--color-average);
+}
+.lh-ratio__wrapper--average .lh-ratio__background {
+  background-color: var(--color-average);
+}
+.lh-ratio__wrapper--average .lh-ratio__content::before {
+  background-color: var(--color-average);
+}
+.lh-ratio__wrapper--fail .lh-ratio__content {
+  color: var(--color-fail);
+}
+.lh-ratio__wrapper--fail .lh-ratio__background {
+  background-color: var(--color-fail);
+}
+.lh-ratio__wrapper--fail .lh-ratio__content::before {
+  border-left: calc(var(--score-icon-size) / 2) solid transparent;
+  border-right: calc(var(--score-icon-size) / 2) solid transparent;
+  border-bottom: var(--score-icon-size) solid var(--color-fail);
+}
+.lh-ratio__wrapper--null .lh-ratio__content {
+  color: var(--color-gray-700);
+}
+.lh-ratio__wrapper--null .lh-ratio__background {
+  background-color: var(--color-gray-700);
+}
+.lh-ratio__wrapper--null .lh-ratio__content::before {
+  border-radius: 50%;
+  border: 2px solid var(--color-gray-700);
+}
+
+.lh-ratio__background {
+  position: absolute;
+  height: 100%;
+  width: 100%;
+  border-radius: calc(var(--gauge-circle-size) / 2);
+  opacity: 0.1;
+  z-index: -1;
+}
+
+.lh-ratio__content {
+  display: flex;
+  position: relative;
+  align-items: center;
+  justify-content: center;
+  font-size: var(--gauge-label-font-size);
+  height: var(--gauge-circle-size);
+  width: max-content;
+  padding: 0px 10%;
+}
+
 .lh-gauge {
   stroke-linecap: round;
   width: var(--gauge-circle-size);
@@ -1179,6 +1247,9 @@
   height: var(--gauge-circle-size);
 }
 .lh-category .lh-gauge__svg-wrapper {
+  --gauge-circle-size: var(--gauge-circle-size-big);
+}
+.lh-category .lh-ratio__wrapper {
   --gauge-circle-size: var(--gauge-circle-size-big);
 }
 
@@ -1225,7 +1296,8 @@
   --gauge-percentage-font-size: var(--gauge-percentage-font-size-big);
 }
 
-.lh-gauge__wrapper {
+.lh-gauge__wrapper,
+.lh-ratio__wrapper {
   position: relative;
   display: flex;
   align-items: center;
@@ -1240,7 +1312,8 @@
   will-change: opacity; /* Only using for layer promotion */
 }
 
-.lh-gauge__label {
+.lh-gauge__label,
+.lh-ratio__label {
   font-size: var(--gauge-label-font-size);
   line-height: var(--gauge-label-line-height);
   margin-top: 10px;
@@ -1249,16 +1322,22 @@
 }
 
 /* TODO(#8185) use more BEM (.lh-gauge__label--big) instead of relying on descendant selector */
-.lh-category .lh-gauge__label {
+.lh-category .lh-gauge__label,
+.lh-category .lh-ratio__label {
   --gauge-label-font-size: var(--gauge-label-font-size-big);
   --gauge-label-line-height: var(--gauge-label-line-height-big);
   margin-top: 14px;
 }
+.lh-category .lh-ratio__content {
+  --gauge-label-font-size: var(--gauge-label-font-size-big);
+}
 
 
 .lh-scores-header .lh-gauge__wrapper,
+.lh-scores-header .lh-ratio__wrapper,
 .lh-scores-header .lh-gauge--pwa__wrapper,
 .lh-sticky-header .lh-gauge__wrapper,
+.lh-sticky-header .lh-ratio__wrapper,
 .lh-sticky-header .lh-gauge--pwa__wrapper {
   width: var(--gauge-wrapper-width);
 }
