--- a/report/assets/styles.css
+++ b/report/assets/styles.css
@@ -130,6 +130,7 @@
   --score-icon-margin-right: 12px;
   --score-icon-margin: 0 var(--score-icon-margin-right) 0 var(--score-icon-margin-left);
   --score-icon-size: 12px;
+  --score-icon-size-big: 16px;
   --scores-container-padding: 20px 0 20px 0;
   --scorescale-height: 6px;
   --scorescale-width: 18px;
@@ -1223,7 +1224,7 @@
   justify-content: center;
   font-size: var(--gauge-label-font-size);
   width: max-content;
-  padding: 0px 10%;
+  padding: 1em;
 }
 
 .lh-gauge {
@@ -1256,6 +1257,7 @@
 }
 .lh-category .lh-ratio__wrapper {
   --gauge-circle-size: var(--gauge-circle-size-big);
+  --score-icon-size: var(--score-icon-size-big)
 }
 
 /* The plugin badge overlay */
