--- a/flow-report/assets/styles.css
+++ b/flow-report/assets/styles.css
@@ -394,7 +394,7 @@
   grid-template-rows: 1fr min-content 1fr min-content;
   grid-template-columns: 1fr 1fr auto 1fr 1fr;
   align-items: center;
-  margin-bottom: var(--double-base-spacing);
+  margin: var(--double-base-spacing) 0px;
 }
 .HeaderTimeline a {
   color: var(--color-gray-800);
@@ -475,9 +475,9 @@
 
 .HeaderTimeline__prev-title,
 .HeaderTimeline__next-title {
-  margin: var(--double-base-spacing);
+  margin: 0px var(--double-base-spacing);
   font-size: 14px;
-  overflow-x: visible;
+  align-self: start;
 }
 
 .HeaderTimeline__current-title {
