--- a/flow-report/assets/styles.css
+++ b/flow-report/assets/styles.css
@@ -266,15 +266,15 @@
 .SummaryFlowStep .FlowSegment {
   grid-column: 2;
 }
+.SummaryFlowStep .FlowStepThumbnail {
+  margin: var(--base-spacing) var(--half-base-spacing);
+}
 
 .FlowStepThumbnail {
   align-self: center;
   justify-self: center;
-  margin: var(--base-spacing) var(--half-base-spacing);
   object-fit: cover;
   object-position: top left;
-}
-.FlowStepThumbnail[src] {
   border: 1px solid var(--color-gray);
 }
 
@@ -432,9 +432,6 @@
   position: relative;
   display: flex;
   margin: var(--base-spacing) 0px;
-}
-.HeaderThumbnail .FlowStepThumbnail {
-  margin: 0;
 }
 .HeaderThumbnail--main .FlowStepThumbnail {
   border: 2px solid var(--color-blue-A700);
