--- a/flow-report/assets/styles.css
+++ b/flow-report/assets/styles.css
@@ -390,10 +390,10 @@
 .Header {
   display: grid;
   grid-template-areas:
-    ".         .            currenttn    .            ."
-    "prevtn    prevtn       currenttn    nexttn       nexttn"
-    "prevtitle .            currenttn    .            nexttitle"
-    "prevtitle currenttitle currenttitle currenttitle nexttitle";
+    ".          .             current-tn    .             ."
+    "prev-tn    prev-tn       current-tn    next-tn       next-tn"
+    "prev-title .             current-tn    .             next-title"
+    "prev-title current-title current-title current-title next-title";
   grid-template-rows: 1fr min-content 1fr min-content;
   grid-template-columns: 1fr 1fr auto 1fr 1fr;
   align-items: center;
@@ -406,17 +406,17 @@
 .Header__prev-thumbnail {
   display: flex;
   align-items: center;
-  grid-area: prevtn;
+  grid-area: prev-tn;
 }
 .Header__current-thumbnail {
   display: flex;
   align-items: center;
-  grid-area: currenttn;
+  grid-area: current-tn;
 }
 .Header__next-thumbnail {
   display: flex;
   align-items: center;
-  grid-area: nexttn;
+  grid-area: next-tn;
 }
 
 .Header__inner-segment,
@@ -463,12 +463,12 @@
 }
 
 .Header__prev-title {
-  grid-area: prevtitle;
+  grid-area: prev-title;
   text-align: left;
 }
 
 .Header__next-title {
-  grid-area: nexttitle;
+  grid-area: next-title;
   text-align: right;
   justify-self: end;
 }
@@ -482,7 +482,7 @@
 }
 
 .Header__current-title {
-  grid-area: currenttitle;
+  grid-area: current-title;
   text-align: center;
   font-size: var(--header-current-title-font-size);
   font-weight: bold;
