--- a/flow-report/assets/styles.css
+++ b/flow-report/assets/styles.css
@@ -395,8 +395,8 @@
     "prev-tn    prev-tn       current-tn    next-tn       next-tn"
     "prev-title .             current-tn    .             next-title"
     "prev-title current-title current-title current-title next-title";
-  grid-template-rows: 1fr min-content 1fr min-content;
-  grid-template-columns: 1fr 1fr auto 1fr 1fr;
+  grid-template-rows: 1fr auto 1fr auto;
+  grid-template-columns: 1fr auto auto auto 1fr;
   align-items: center;
   margin: var(--double-base-spacing) 0px;
 }
