--- a/flow-report/assets/styles.css
+++ b/flow-report/assets/styles.css
@@ -13,7 +13,7 @@
   --header-adjacent-title-font-size: 14px;
   --header-current-description-font-size: 12px;
   --header-current-title-font-size: 20px;
-  --header-side-margin: calc(var(--base-spacing) * 4);
+  --header-margin: minmax(0px, calc(var(--base-spacing) * 4));
   --half-base-spacing: calc(var(--base-spacing) / 2);
   --separator-color: var(--color-gray-300);
   --sidebar-flow-step-navigation-font-size: 14px;
@@ -391,17 +391,23 @@
 .Header {
   display: grid;
   grid-template-areas:
-    ".          .             current-tn    .             ."
-    "prev-tn    prev-tn       current-tn    next-tn       next-tn"
-    "prev-title .             current-tn    .             next-title"
-    "prev-title current-title current-title current-title next-title";
+    ".        .          .             current-tn    .             .          ."
+    "prev-seg prev-tn    prev-tn       current-tn    next-tn       next-tn    next-seg"
+    ".        prev-title .             current-tn    .             next-title ."
+    ".        prev-title current-title current-title current-title next-title .";
   grid-template-rows: 1fr auto 1fr auto;
-  grid-template-columns: 1fr auto auto auto 1fr;
+  grid-template-columns: var(--header-margin) 1fr auto auto auto 1fr var(--header-margin);
   align-items: center;
   margin: var(--double-base-spacing) 0px;
 }
 .Header a {
   color: var(--color-gray-800);
+}
+.Header > .HeaderSegment:first-child {
+  grid-area: prev-seg;
+}
+.Header > .HeaderSegment:last-child {
+  grid-area: next-seg;
 }
 
 .Header__prev-thumbnail {
@@ -419,17 +425,14 @@
   align-items: center;
   grid-area: next-tn;
 }
+.Header__prev-thumbnail .HeaderSegment,
+.Header__next-thumbnail .HeaderSegment {
+  flex-grow: 1;
+}
 
-.Header__inner-segment,
-.Header__outer-segment {
+.HeaderSegment {
   height: 2px;
   background-color: var(--color-blue-A700);
-}
-.Header__outer-segment {
-  width: var(--header-side-margin);
-}
-.Header__inner-segment {
-  flex-grow: 1;
 }
 
 .HeaderThumbnail {
@@ -465,13 +468,11 @@
 
 .Header__prev-title {
   grid-area: prev-title;
-  margin-left: var(--header-side-margin);
   text-align: left;
 }
 
 .Header__next-title {
   grid-area: next-title;
-  margin-right: var(--header-side-margin);
   text-align: right;
   justify-self: end;
 }
