--- a/flow-report/assets/styles.css
+++ b/flow-report/assets/styles.css
@@ -11,10 +11,12 @@
   --double-base-spacing: calc(var(--base-spacing) * 2);
   --gather-mode-icon-size: 16px;
   --header-adjacent-title-font-size: 14px;
+  --header-adjacent-title-width: minmax(var(--min-text-width), 1fr);
   --header-current-description-font-size: 12px;
   --header-current-title-font-size: 20px;
   --header-margin: minmax(0px, calc(var(--base-spacing) * 4));
   --half-base-spacing: calc(var(--base-spacing) / 2);
+  --min-text-width: 20ch;
   --separator-color: var(--color-gray-300);
   --sidebar-flow-step-navigation-font-size: 14px;
   --sidebar-selected-bg-color: #DDEEFF;
@@ -242,7 +244,7 @@
   max-width: var(--report-width);
   display: grid;
   grid-auto-rows: min-content;
-  grid-template-columns: min-content min-content minmax(20ch, 4fr) 1fr 1fr 1fr 1fr;
+  grid-template-columns: min-content min-content minmax(var(--min-text-width), 4fr) 1fr 1fr 1fr 1fr;
   align-items: center;
   margin: var(--base-spacing) 0px;
 }
@@ -411,7 +413,7 @@
     ".        prev-title .             current-tn    .             next-title ."
     ".        prev-title current-title current-title current-title next-title .";
   grid-template-rows: 1fr auto 1fr auto;
-  grid-template-columns: var(--header-margin) 1fr auto auto auto 1fr var(--header-margin);
+  grid-template-columns: var(--header-margin) var(--header-adjacent-title-width) auto auto auto var(--header-adjacent-title-width) var(--header-margin);
   align-items: center;
   margin: var(--double-base-spacing) 0px;
 }
