--- a/flow-report/assets/styles.css
+++ b/flow-report/assets/styles.css
@@ -409,7 +409,7 @@
   text-overflow: ellipsis;
   white-space: nowrap;
   margin-top: calc(0.25 * var(--base-spacing));
-  margin-bottom: var(--half-base-spacing);
+  margin-bottom: calc(0.75 * var(--base-spacing));
   color: var(--color-gray-700);
 }
 
@@ -447,13 +447,13 @@
 
 .TooltipAudits__title {
   line-height: 24px;
-  margin-top: var(--half-base-spacing);
+  margin-top: calc(0.75 * var(--base-spacing));
   font-weight: var(--bold-weight);
 }
 
 .TooltipAudit {
   display: flex;
-  margin: var(--half-base-spacing) 0px;
+  margin: calc(0.25 * var(--base-spacing)) 0px;
   color: var(--color-gray-700);
   --score-icon-size: 10px;
 }
